# AssetServer

./: .dockerignore  .gitignore  .gitmodules  API.md  Dockerfile  Dockerfile.hunyuan3d  Dockerfile.sam3d  README.md  docker-compose.docker-api.yaml  docker-compose.yaml  main.py  pyproject.toml
assetserver/: artifact_store.py  artifacts.py  asset_normalization.py  asset_observe.py  asset_store.py  blender_scene_worker.py  canonical_asset_scene.v1.json  clip_embeddings.py  config.py  job_worker.py  jobs.py  mesh_utils.py  procedural_room_shell.py  runtime_version.py  scene_compilers.py  scene_ir.py  scene_ir_store.py  scene_job_handlers.py  scene_renderer.py  scenes.py  scheduler.py  simulation_assets.py  staging.py
assetserver/articulated_retrieval/: __init__.py  data_loader.py  retrieval.py
assetserver/articulated_retrieval_server/: __init__.py  client.py  server_app.py  server_manager.py  standalone_server.py
assetserver/asset_acquisition_server/: __init__.py  client.py  dataclasses.py  docker_manager.py  server_app.py  server_manager.py  standalone_server.py
assetserver/convex_decomposition_server/: __init__.py  server_app.py  server_manager.py  standalone_server.py
assetserver/generation_pipelines/: __init__.py
assetserver/generation_pipelines/hunyuan3d/: __init__.py  pipeline.py
assetserver/generation_pipelines/sam3d/: __init__.py  cuda_env_setup.py  model_bundle.py  pipeline.py  pipeline_manager.py
assetserver/generation_server/: __init__.py  app.py  protocol.py  runtime.py  standalone.py
assetserver/geometry_generation_server/: README.md  __init__.py  client.py  cuda_env_setup.py  dataclasses.py  geometry_generation.py  gpu_worker.py  hunyuan3d_pipeline_manager.py  sam3d_pipeline_manager.py  server_app.py  server_manager.py  standalone_server.py  worker_pool.py
assetserver/hssd_retrieval/: __init__.py  alignment.py  clip_similarity.py  config.py  retrieval.py
assetserver/hssd_retrieval_server/: client.py  dataclasses.py  server_app.py  server_manager.py
assetserver/materials_retrieval/: __init__.py  config.py  data_loader.py  retrieval.py
assetserver/materials_retrieval_server/: __init__.py  client.py  server_app.py  server_manager.py  standalone_server.py
assetserver/objaverse_retrieval/: __init__.py  clip_similarity.py  config.py  data_loader.py  retrieval.py
assetserver/objaverse_retrieval_server/: client.py  dataclasses.py  server_app.py  server_manager.py
assetserver/openclip_server/: __init__.py  app.py  model_bundle.py  model_tool.py  runtime.py  standalone.py
assetserver/placement/: __init__.py  engine.py  models.py  profile.py
assetserver/postprocess/: __init__.py  collision.py  config.py  store.py
assetserver/postprocess_server/: __init__.py  client.py  server_app.py  standalone_server.py
assetserver/retrieval/: __init__.py  artvip.py  assets.py  engine.py  sources.py
assetserver/retrieve_server/: __init__.py  backends.py  dataclasses.py  server_app.py  server_manager.py  standalone_server.py
assetserver/sam3d_server/: __init__.py  app.py  assets.py  model_tool.py  runtime.py  standalone.py
assetserver/utils/: env.py  network_utils.py  omegaconf.py
config/: openclip.yaml  server.yaml
config/generate/: hunyuan3d.yaml  sam3d.yaml
config/retrieve/: articulated.yaml  hssd.yaml  materials.yaml  objaverse.yaml
docker/: Dockerfile  services.yaml  versions.env
docker/3d/: Dockerfile
docs/: RENDERER_API.md  config-todo.md  docker-guide.md
scripts/: audit_artvip_dataset.py  build_hunyuan3d_image.sh  build_openclip_docker.sh  build_sam3d_docker.sh  build_sam3d_image.sh  build_scene_from_ir.py  build_scene_viewer_docker.sh  check_procedural_room_canary.py  docker_service.py  docker_service.sh  download_hunyuan3d_checkpoints.sh  download_objaverse_data.sh  download_openclip_checkpoints.py  download_openclip_ckpt.py  download_openclip_ckpt.sh  download_sam3d_checkpoints.sh  download_sam3d_ckpt.sh  download_sam3d_ckpt_impl.sh  fetch_model_sources.sh  install_hunyuan3d.sh  install_hunyuan3d_docker.sh  install_sam3d.sh  install_sam3d_docker.sh  launch_service.sh  migrate_collision_assets.py  model_service.sh  request_articulated.py  request_backend.py  request_hssd.py  request_hunyuan3d.py  request_materials.py  request_objaverse.py  request_sam3d.py  run_backend_docker.py  run_hunyuan3d_docker.sh  run_openclip_docker.sh  run_sam3d_docker.sh  run_scene_viewer_docker.sh  smoke_scene_viewer.py  start_postprocess_server.py
tests/: request_retrieve_gateway.py  test_artvip_adapter.py  test_asset_store.py  test_asset_store_v2.py  test_blender_scene_worker.py  test_build_sam3d_script.py  test_canonical_camera.py  test_collision_postprocess.py  test_config.py  test_dependency_groups.py  test_docker_layering.py  test_download_dependencies.py  test_download_sam3d_ckpt.py  test_gateway_assets_v2.py  test_gateway_capabilities.py  test_gateway_jobs_v2.py  test_gateway_placement.py  test_gateway_retrieve_v1.py  test_gateway_sam3d_routes.py  test_gateway_scenes_v1.py  test_gateway_scenes_v2.py  test_generation_server.py  test_job_worker_startup.py  test_jobs.py  test_launch_service.py  test_observation_cutaway.py  test_openclip_docker.py  test_openclip_server.py  test_procedural_room_shell.py  test_retrieval_engine.py  test_run_sam3d_script.py  test_runtime_version.py  test_sam3d_api.py  test_sam3d_docker_install.py  test_sam3d_model_bundle.py  test_sam3d_runtime_cache.py  test_scene_compilers.py  test_scene_ir.py  test_scene_ir_store.py  test_scene_job_handlers.py  (+5 more)
tests/smoke/: README.md  retrieve_gateway.py
