[project]
name = "assetserver"
version = "0.1.0"
description = "HTTP tool and resource backend for asset acquisition and processing"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "colorama>=0.4.6",
    "coacd>=1.0.7",
    "fastapi>=0.115.0",
    "hydra-core>=1.3.2",
    "huggingface-hub>=0.34.0,<1.0",
    "httpx>=0.28.0",
    "numpy>=1.26,<2.0",
    "omegaconf>=2.3.0",
    "Pillow>=11.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "PyYAML>=6.0",
    "scipy>=1.15.3",
    "setuptools<71.0.0",
    "tqdm>=4.67.1",
    "trimesh>=4.7.4",
    "uvicorn>=0.30.0",
    "vhacdx>=0.0.10",
    "ruff>=0.15.21",
]

[project.scripts]
asset-acquisition-server = "assetserver.asset_acquisition_server.standalone_server:main"
assetserver-job-worker = "assetserver.job_worker:main"

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "isort==5.12.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-testmon>=2.1.3",
]

retrieve = [
    "objathor>=0.0.8",
    "open-clip-torch>=2.20.0",
    "torch>=2.5.0,<2.6.0",
    "torchvision>=0.20.0,<0.21.0",
]

generate = [
    "diffusers>=0.35.1",
    "einops>=0.8.1",
    "ninja>=1.13.0",
    "pybind11>=3.0.1",
    "torch>=2.5.0,<2.6.0",
    "torchvision>=0.20.0,<0.21.0",
    "transformers>=4.55.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assetserver"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
lines_between_types = 1
combine_as_imports = true
known_first_party = ['assetserver']

[tool.ruff.lint.per-file-ignores]
"assetserver/geometry_generation_server/geometry_generation.py" = ["E402"]
"assetserver/geometry_generation_server/sam3d_pipeline_manager.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
