[project]
name = "assetserver"
version = "0.1.0"
description = "HTTP tool and resource backend for asset acquisition and processing"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "colorama>=0.4.6",
    "coacd>=1.0.7",
    "fastapi>=0.115.0",
    "hydra-core>=1.3.2",
    "huggingface-hub>=0.34.0,<1.0",
    "httpx>=0.28.0",
    "numpy>=1.26,<2.0",
    "omegaconf>=2.3.0",
    "Pillow>=11.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "PyYAML>=6.0",
    "scipy>=1.15.3",
    "setuptools<71.0.0",
    "tqdm>=4.67.1",
    "trimesh>=4.7.4",
    "uvicorn>=0.30.0",
    "vhacdx>=0.0.10",
    "ruff>=0.15.21",
]

[project.optional-dependencies]
# Standalone OpenCLIP service. Keep the Torch pair aligned with the CUDA 12.4
# Docker images and the SAM3D extra so selecting both extras installs one copy.
openclip = [
    "open-clip-torch==3.2.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

# Curated SAM3D inference environment. Do not depend directly on the upstream
# sam3d_objects package metadata: it includes its training, notebook, Blender,
# and CUDA 12.1 environments. Its pinned source checkout is prepared separately
# by the local SAM3D setup script.
sam3d = [
    "decord==0.6.0",
    "easydict==1.13",
    "einops-exts==0.0.4",
    "fvcore==0.1.5.post20221221",
    "gsplat @ git+https://github.com/nerfstudio-project/gsplat.git@2323de5905d5e90e035f792fe65bad0fedd413e7",
    "imageio>=2.37,<3",
    "iopath==0.1.10",
    "loguru>=0.7.2,<0.8",
    "moge @ git+https://github.com/microsoft/MoGe.git@a8c37341bc0325ca99b9d57981cc3bb2bd3e255b",
    "ninja>=1.13.0",
    "nvdiffrast @ git+https://github.com/NVlabs/nvdiffrast.git@v0.4.0",
    "open3d==0.18.0",
    "opencv-python>=4.9,<5",
    "point-cloud-utils==0.29.5",
    "pybind11>=3.0.1",
    "pycocotools>=2.0.7,<3",
    "pymeshfix==0.17.0",
    "pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@33824be3cbc87a7dd1db0f6a9a9de9ac81b2d0ba",
    "roma==1.5.1",
    "scikit-image>=0.23,<0.27",
    "spconv-cu121==2.3.8",
    "timm>=1.0.17,<2",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "utils3d @ git+https://github.com/EasternJournalist/utils3d.git@3913c65d81e05e47b9f367250cf8c0f7462a0900",
    "xatlas>=0.0.9,<0.1",
    "xformers==0.0.28.post3",
]

[project.scripts]
asset-acquisition-server = "assetserver.asset_acquisition_server.standalone_server:main"
assetserver-job-worker = "assetserver.job_worker:main"

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "isort==5.12.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-testmon>=2.1.3",
]

retrieve = [
    "objathor>=0.0.8",
    "open-clip-torch>=2.20.0",
    "torch>=2.5.0,<2.6.0",
    "torchvision>=0.20.0,<0.21.0",
]

generate = [
    "diffusers>=0.35.1",
    "einops>=0.8.1",
    "ninja>=1.13.0",
    "pybind11>=3.0.1",
    "torch>=2.5.0,<2.6.0",
    "torchvision>=0.20.0,<0.21.0",
    "transformers>=4.55.4",
]

[tool.uv.extra-build-dependencies]
gsplat = ["torch==2.5.1"]
nvdiffrast = ["torch==2.5.1"]
pytorch3d = ["torch==2.5.1", "ninja>=1.13.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assetserver"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
lines_between_types = 1
combine_as_imports = true
known_first_party = ['assetserver']

[tool.ruff.lint.per-file-ignores]
"assetserver/generation_pipelines/sam3d/pipeline_manager.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
